# prax-sandbox

./: .dockerignore  .gitignore  Dockerfile.daemon  Makefile  README.md  docker-compose.remote.yml  docker-compose.yml  pyproject.toml
docs/: README.md  browser.md  desktop.md  remote.md  sandbox.md
prax_sandbox/: __init__.py  cdp_service.py  control_plane.py  exec.py  fileops.py
prax_sandbox/daemon/: __init__.py  __main__.py  app.py  auth.py  cdp_proxy.py  config.py
prax_sandbox_client/: __init__.py  client.py  config.py  protocol.py  transport.py
sandbox/: Dockerfile  bash-respawn.sh  cdp-proxy.js  chromium-launch.sh  clipboard-bridge.py  entrypoint.sh  opencode.json  start.sh  supervisord.conf
sandbox/cast-ext/: background.js  manifest.json  offscreen.html  offscreen.js
tests/: test_control_plane.py  test_daemon.py  test_files_api.py  test_remote_client.py  test_transport.py
