[project]
name = "prax-sandbox"
version = "0.1.0"
description = "Standalone, plug-and-play coding/browser/desktop sandbox for agentic harnesses"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31",
    "docker>=7.0.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prax_sandbox_client", "prax_sandbox"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "UP"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
