[project]
name = "prax-sandbox"
version = "0.1.0"
description = "Standalone, plug-and-play coding/browser/desktop sandbox for agentic harnesses"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31",
    "docker>=7.0.0",
    "pytest>=8.0",
]

# The remote control daemon is OPTIONAL. A harness using the sandbox in-process
# (or driving a remote daemon as a client) does NOT need these — only the host
# RUNNING the daemon installs `prax-sandbox[daemon]`.
[project.optional-dependencies]
daemon = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "websockets>=13",
]

[project.scripts]
prax-sandbox-daemon = "prax_sandbox.daemon.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prax_sandbox_client", "prax_sandbox"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "UP"]
ignore = ["E501", "E402"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's Body()/Query() in argument defaults is the framework idiom (B008).
"prax_sandbox/daemon/app.py" = ["B008"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
